# graph-analysis

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  main.cpp  parser.py  requirments.txt
algo/: algorithms.hpp  centrality.cpp  connectivity.cpp  direction.cpp  distance.cpp  graph.cpp  graph.hpp  input.cpp  similarity.cpp
checkers/: first_task.py  four_task.py  second_task.py  third_task.py
graffic/: graffic.cpp  graffic.h
test/: example.cpp  test_centrality.cpp  test_connectivity.cpp  test_direction.cpp  test_distance.cpp  test_graph.cpp  test_similarity.cpp  test_utils.h
